# mcpsentry

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  _config.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  calibration-target.md  config.yml  new-analyzer-rule.md
.github/workflows/: publish.yml  tests.yml
analyzer/: README.md  __init__.py  __main__.py  analyze.py  lint_scenarios.py  rules.py
analyzer/tests/: test_analyzer.py
analyzer/tests/fixtures/: example_server.py
calibration/: README.md  __init__.py  eval.py  scaffold.py  targets.yaml
calibration/ground_truth/: mcp-server-sqlite.yaml
calibration/reports/: aggregate-with-sqlite.json  captured-mcp-server-sqlite.json
calibration/tests/: test_corpus_regression.py
classifier/: __init__.py  __main__.py  lexicons.py
disclose/: __init__.py  cli.py  dates.py  parse.py  templates.py
disclose/tests/: test_disclose.py
disclose/tests/fixtures/: sample-disclosure-multiline.md  sample-disclosure.md
disclosures/: 2026-05-12-mcp-fetch-http-request-ssrf.md  2026-05-12-mcp-oauth-gateway-dns-rebinding.md  2026-06-02-fastmcp-http-dns-rebinding.md  2026-06-02-mcp-server-fetch-sse-dns-rebinding.md
docs/: scenario-schema.md  static-rules.md
drafts/: blog-draft-2026-08-10-mcp-ssrf-disclosure.md  blog-draft-2026-08-10-mcp-transport-layer-blind-spot.md  blog-outline-v2.md  cfp-targets.md
examples/: README.md
examples/01-audit-mcp-server-fetch/: README.md
examples/02-ssrf-class-survey/: README.md
examples/03-detector-evolution-s014/: README.md
findings/: 2026-05-11-MCP-D-003-fetch-direct-environment-dependent-ssrf.md  2026-05-12-MCP-S-014-fastmcp-http-dns-rebinding.md  2026-05-12-MCP-S-014-fetch-streamablehttp-server-dns-rebinding.md  2026-05-12-MCP-S-014-streamablehttp-proxy-dns-rebinding.md  2026-06-02-MCP-S-014-mcp-server-fetch-sse-dns-rebinding.md  README.md
harness/: README.md  __init__.py  agents.py  audit.py  capture.py  cli.py
harness/testing/: __init__.py  mock_server.py
harness/tests/: conftest.py  test_audit.py
poc/dns-rebind/: quick_probe.py
poc/dns-rebind/attacker/: nginx.conf
poc/dns-rebind/attacker/html/: index.html  rebind.js
poc/dns-rebind/dns/: healthcheck.py
scenarios/: README.md
