[project]
name = "mcp-scan"
version = "0.2.0"
description = "Security testing toolkit for MCP servers and AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "MCP-Scan contributors" }]
keywords = ["mcp", "model-context-protocol", "security", "scanner", "agent-security"]
dependencies = [
    "mcp>=1.0",
    "aiohttp>=3.9",
    "pydantic>=2.6",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
anthropic = [
    "anthropic>=0.40",
]

[project.scripts]
mcp-scan-test = "harness.cli:main"
mcp-scan-classify = "classifier.__main__:main"
mcp-scan-analyze = "analyzer.__main__:main"
mcp-scan-lint-scenarios = "analyzer.lint_scenarios:main"
mcp-scan-eval-calibration = "calibration.eval:main"
mcp-scan-capture = "harness.capture:main"
mcp-scan-scaffold-gt = "calibration.scaffold:main"
mcp-scan-audit = "harness.audit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "classifier", "analyzer", "calibration"]
