[project]
name = "mcpsentry"
version = "0.2.0"
description = "Security testing toolkit for MCP servers and AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "mcpsentry contributors" }]
keywords = ["mcp", "model-context-protocol", "security", "scanner", "agent-security"]
dependencies = [
    "mcp>=1.0",
    "aiohttp>=3.9",
    "pydantic>=2.6",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/desledishant10/mcpsentry"
Repository = "https://github.com/desledishant10/mcpsentry"
Documentation = "https://desledishant10.github.io/mcpsentry"
Issues = "https://github.com/desledishant10/mcpsentry/issues"
Disclosures = "https://github.com/desledishant10/mcpsentry/tree/main/disclosures"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
anthropic = [
    "anthropic>=0.40",
]

[project.scripts]
mcpsentry-test = "harness.cli:main"
mcpsentry-classify = "classifier.__main__:main"
mcpsentry-analyze = "analyzer.__main__:main"
mcpsentry-lint-scenarios = "analyzer.lint_scenarios:main"
mcpsentry-eval-calibration = "calibration.eval:main"
mcpsentry-capture = "harness.capture:main"
mcpsentry-scaffold-gt = "calibration.scaffold:main"
mcpsentry-audit = "harness.audit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "classifier", "analyzer", "calibration"]
